tests/sksl/errors/UnscopedVariableInFor.glsl
### Compilation failed:

error: 2: variable 's' must be created in a scope
    for (int x=0; x<10; ++x) float s = sqrt(4);
                             ^^^^^^^^^^^^^^^^^
1 error
